--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,8 @@ jobs:
             exit 1
           fi
 
-      - name: Check with go vet
-        run: go vet --tags "${{ steps.tags.outputs.tags }}" ./...
-
-      - uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          version: "2023.1.5"
-          install-go: false
-          build-tags: ${{ steps.tags.outputs.tags }}
+      - name: Check with golangci-lint
+        run: make lint
 
   python-lint:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
