--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -22,7 +22,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -35,7 +35,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -48,7 +48,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
