--- a/.github/workflows/check-required.yml
+++ b/.github/workflows/check-required.yml
@@ -21,6 +21,7 @@ permissions:
 jobs:
   required-jobs:
     name: Check required jobs
+    if: ${{ !github.event.repository.fork }}
     environment: create-check
     runs-on: ubuntu-latest
     steps:
