--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-tags: 1
 
       # The main branch is tagged as "main" and "edge".
       # Tags are named after the version, e.g. "v0.1.0" -> "0.1.0".
