revert bucket creation in compose file

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -76,6 +76,5 @@ services:
       MINIO_ROOT_USER: user
       MINIO_ROOT_PASSWORD: password
       MINIO_CONSOLE_ADDRESS: ":9001"
-    entrypoint: sh
-    command: -c 'mkdir -p /data/{bucket1,bucket2,bucket3} && exec minio server /data'
+    command: server /data'
     network_mode: service:db
