--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,19 +44,6 @@
             ],
         },
         {
-            "name": "Launch server (integration tests)",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/main.go",
-            "buildFlags": "-tags '${config:go.buildTags}'",
-            "args": [
-                "server",
-                "--database-uri",
-                "sqlite:///tmp/fasttrackml.db"
-            ],
-        },
-        {
             "name": "Launch server (encrypted sqlite file)",
             "type": "go",
             "request": "launch",
@@ -67,6 +54,19 @@
                 "server",
                 "--database-uri",
                 "sqlite://encrypted.db?_key=passphrase"
+            ],
+        },
+        {
+            "name": "Launch server (supports integration tests)",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/main.go",
+            "buildFlags": "-tags '${config:go.buildTags}'",
+            "args": [
+                "server",
+                "--database-uri",
+                "sqlite:///tmp/fasttrackml.db"
             ],
         }
     ]
