--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
+      actions: write
       contents: write
     steps:
       - name: Download artifact
@@ -46,16 +47,12 @@ jobs:
           files: dist/*
           prerelease: ${{ contains(github.ref, '-') }}
 
-  update-website:
-    name: Update website
-    needs: github-release
-    if: ${{ !contains(github.ref, '-') }}
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    uses: ./.github/workflows/website.yml
-
+      - name: Trigger website update
+        if: ${{ !contains(github.ref, '-') }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: gh workflow run --repo ${{ github.repository }} website.yml
+    
   docker-release:
     name: Publish container image to DockerHub
     if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
