--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -22,7 +22,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -35,7 +35,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
@@ -48,12 +48,25 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/main.go",
             "buildFlags": "-tags '${config:go.buildTags}'",
             "args": [
                 "server",
                 "--database-uri",
                 "sqlite://encrypted.db?_key=passphrase"
+            ],
+        },
+        {
+            "name": "Launch server (supports integration tests)",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/main.go",
+            "buildFlags": "-tags '${config:go.buildTags}'",
+            "args": [
+                "server",
+                "--database-uri",
+                "sqlite:///tmp/fasttrackml.db"
             ],
         }
     ]
