*address PR remarks.

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -13,3 +13,4 @@ POSTGRES_HOSTNAME=localhost
 AWS_ACCESS_KEY_ID=user
 AWS_SECRET_ACCESS_KEY=password
 FML_S3_ENDPOINT_URI=http://localhost:9000
+FML_GS_ENDPOINT_URI=http://localhost:4443/storage/v1/
