--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -61,6 +61,7 @@ services:
     # ports:
     #   - "5000:5000"
     #   - "5432:5432"
+    #   - "4443:4443"
     #   - "9000:9000"
     #   - "9001:9001"
 
@@ -78,3 +79,8 @@ services:
       MINIO_CONSOLE_ADDRESS: ":9001"
     command: server /data
     network_mode: service:db
+
+  google-storage:
+    image: fsouza/fake-gcs-server
+    entrypoint: sh
+    command: -c 'exec fake-gcs-server -public-host=google-storage -scheme http'
