--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -53,8 +53,9 @@ services:
 
   google-storage:
     image: fsouza/fake-gcs-server
-    entrypoint: sh
-    command: -c 'exec fake-gcs-server -public-host=google-storage -scheme http'
+    command:
+      -public-host=google-storage
+      -scheme=http
 
   integration-tests:
     image: golang:1.21
