--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       minio:
         condition: service_healthy
       google-storage:
-        condition: service_started
+        condition: service_healthy
       postgres:
         condition: service_healthy
     environment:
@@ -56,6 +56,10 @@ services:
     command:
       -public-host=google-storage
       -scheme=http
+    healthcheck:
+      test: [ "CMD", "wget", "-nv -t1 -spider", "http://google-storage:4443/storage/v1/b" ]
+      interval: 5s
+      timeout: 5s
 
   integration-tests:
     image: golang:1.21
