--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       minio:
         condition: service_healthy
+      google-storage:
+        condition: service_healthy
       postgres:
         condition: service_healthy
     environment:
@@ -24,6 +26,7 @@ services:
       FML_LOG_LEVEL: debug
       FML_DATABASE_URI: ${FML_DATABASE_URI:-postgres://postgres:postgres@postgres/postgres}
       FML_S3_ENDPOINT_URI: http://minio:9000
+      FML_GS_ENDPOINT_URI: http://google-storage:4443/storage/v1/
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
@@ -48,6 +51,16 @@ services:
       MINIO_ROOT_PASSWORD: "password"
       MINIO_CONSOLE_ADDRESS: ":9001"
 
+  google-storage:
+    image: fsouza/fake-gcs-server
+    command:
+      - -public-host=google-storage
+      - -scheme=http
+    healthcheck:
+      test: [ "CMD", "wget", "-q", "--spider", "http://localhost:4443/storage/v1/b" ]
+      interval: 5s
+      timeout: 5s
+
   integration-tests:
     image: golang:1.21
     command: make test-go-integration
@@ -59,6 +72,8 @@ services:
     depends_on:
       minio:
         condition: service_healthy
+      google-storage:
+        condition: service_healthy
       postgres:
         condition: service_healthy
       service:
@@ -69,6 +84,7 @@ services:
       FML_SERVICE_URI: http://service:5000
       FML_DATABASE_URI: ${FML_DATABASE_URI:-postgres://postgres:postgres@postgres/postgres}
       FML_S3_ENDPOINT_URI: http://minio:9000
+      FML_GS_ENDPOINT_URI: http://google-storage:4443/storage/v1/
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
