--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: gh workflow run --repo ${{ github.repository }} website.yml
-    
+
   docker-release:
     name: Publish container image to DockerHub
     if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
@@ -91,7 +91,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: fasttrackml-oci-image
+          name: fasttrackml-oci-images
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -101,9 +101,17 @@ jobs:
 
       - name: Push to Docker Hub
         run: |
-          for tag in ${{ steps.tags.outputs.tags }}
+          tags=(${{ steps.tags.outputs.tags }})
+          for image in fasttrackml-oci-*.tar
           do
-            echo "::group::Pushing image to ${{ vars.DOCKER_REPO }}:$tag"
-            skopeo copy --all oci-archive:fasttrackml-oci.tar:${{ steps.tags.outputs.ref }} docker://${{ vars.DOCKER_REPO }}:$tag
+            digest=$(tar -xOf $image index.json | jq -r '.manifests[0].digest')
+            digests+=($digest)
+            echo "::group::Pushing $image to ${{ vars.DOCKER_REPO }}@$digest"
+            skopeo copy oci-archive:$image:${{ steps.tags.outputs.ref }} docker://${{ vars.DOCKER_REPO }}@$digest
             echo "::endgroup::"
           done
+          echo "::group::Pushing merged manifest to ${{ vars.DOCKER_REPO }} for tags: ${tags[@]}"
+          docker buildx imagetools create \
+            $(printf -- "--tag ${{ vars.DOCKER_REPO }}:%s " ${tags[@]}) \
+            $(printf "${{ vars.DOCKER_REPO }}@%s " ${digests[@]})
+          echo "::endgroup::"
