--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,6 @@ jobs:
         with:
           go-version: "1.21"
 
-      - name: Read build tags
-        id: tags
-        run: echo tags=$(cat .go-build-tags) >> $GITHUB_OUTPUT
-
       - name: Install tools
         run: make install-tools
 
@@ -65,8 +61,8 @@ jobs:
             exit 1
           fi
 
-      - name: Check with golangci-lint
-        run: make lint
+      - name: Run Go linters
+        run: make go-lint
 
   python-lint:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
@@ -109,7 +105,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        database-backend: [sqlite, sqlcipher, postgres]
         include:
           - database-backend: sqlite
             database-uri: sqlite:///tmp/fasttrackml.db
@@ -125,11 +120,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.21"
-
       - name: Run Integration Tests
         run: make service-test
         env:
@@ -142,7 +132,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        api: [ aim, mlflow ]
+        api: [aim, mlflow]
       fail-fast: false
     services:
       postgres:
