feat: add new files to gitignore section

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/
 fml
 *.exe
 __debug_bin*
+venv
 
 # Local database
 fasttrackml.db*
@@ -30,6 +31,15 @@ wheelhouse/
 .aim
 mlruns
 .pytest_cache
+mlflowsqlitethrougput.csv
+mlflowpostgresthrougput.csv
+fasttracksqlitethrougput.csv
+fasttrackpostgresthrougput.csv
+mlflowsqliteretreival.csv
+mlflowpostgresretreival.csv
+fasttrackpostgresretreival.csv
+fasttracksqliteretreival.csv
+performanceReport.png
 
 # Python package
 __pycache__/
